chore: upgrade to cosmwasm-std 0.15

--- a/contracts/anchor_beth_reward/schema/config_response.json
+++ b/contracts/anchor_beth_reward/schema/config_response.json
@@ -8,25 +8,16 @@
   ],
   "properties": {
     "owner": {
-      "$ref": "#/definitions/HumanAddr"
+      "type": "string"
     },
     "reward_denom": {
       "type": "string"
     },
     "token_contract": {
-      "anyOf": [
-        {
-          "$ref": "#/definitions/HumanAddr"
-        },
-        {
-          "type": "null"
-        }
+      "type": [
+        "string",
+        "null"
       ]
-    }
-  },
-  "definitions": {
-    "HumanAddr": {
-      "type": "string"
     }
   }
 }
