--- a/packages/beth/Cargo.toml
+++ b/packages/beth/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "beth"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,20 +17,17 @@ incremental = false
 overflow-checks = true
 
 [features]
-default = ["cranelift"]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
-cranelift = ["cosmwasm-vm/default-cranelift"]
-singlepass = ["cosmwasm-vm/default-singlepass"]
+backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = { version = "0.2" }
-cosmwasm-storage = { version = "0.10.1" }
-terra-cosmwasm = { version = "1.2.2" }
-cosmwasm-std = { version = "0.10.1" }
-schemars = "0.7"
+cw20 = { version = "0.7.0" }
+cosmwasm-storage = { version = "0.15.0" }
+terra-cosmwasm = { version = "2.1.0" }
+cosmwasm-std = { version = "0.15.0" }
+schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
-cosmwasm-vm = { version = "0.10.1", default-features = false }
+cosmwasm-vm = { version = "0.15.0", default-features = false }
