--- a/contracts/anchor_beth_token/Cargo.toml
+++ b/contracts/anchor_beth_token/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "anchor_beth_token"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2018"
 
 [lib]
@@ -23,17 +23,18 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cw2 = { version = "0.7.0" }
-cw20 = { version = "0.7.0" }
-cw20-base = { version = "0.7.0", features = ["library"] }
-cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
-cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
+cw2 = { version = "0.8.0-rc2" }
+cw20 = { version = "0.8.0-rc2" }
+cosmwasm-std = { version = "0.16.0", features = ["staking"] }
+cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
+cw-storage-plus = { version = "0.8.0-rc2", features = ["iterator"]}
 schemars = "0.8.1"
+cw20-legacy = "0.2.0-rc2"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 snafu = { version = "0.6.3" }
-beth = { path = "../../packages/beth", default-features = false, version = "0.2.0"}
+beth = { path = "../../packages/beth", default-features = false, version = "0.3.0"}
 
 [dev-dependencies]
 # we only need to enable this if we use integration tests
 #cosmwasm-vm = { version = "0.10.1", default-features = false }
-cosmwasm-schema = { version = "0.15.0", default-features = false  }
+cosmwasm-schema = { version = "0.16.0", default-features = false  }
