--- a/packages/beth/Cargo.toml
+++ b/packages/beth/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "beth"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,12 +22,12 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = { version = "0.7.0" }
-cosmwasm-storage = { version = "0.15.0" }
-terra-cosmwasm = { version = "2.1.0" }
-cosmwasm-std = { version = "0.15.0" }
+cw20 = { version = "0.8.0-rc2" }
+cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
+terra-cosmwasm = { version = "2.2.0" }
+cosmwasm-std = { version = "0.16.0" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
-cosmwasm-vm = { version = "0.15.0", default-features = false }
+cosmwasm-vm = { version = "0.16.0", default-features = false }
