--- a/contracts/anchor_beth_reward/Cargo.toml
+++ b/contracts/anchor_beth_reward/Cargo.toml
@@ -30,10 +30,10 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = { version = "0.8.0-rc2" }
+cw20 = { version = "0.8.0" }
 cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
 cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
-cw-storage-plus = { version = "0.8.0-rc2", features = ["iterator"]}
+cw-storage-plus = { version = "0.8.0", features = ["iterator"]}
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.21" }
